Fix (most) Javadoc warnings (#6)
* Fix (most) Javadoc warnings
* Minor Javadoc changes